--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ section .layer1 {
 }
 
 .layer1:hover ~ .layer2 {
-	background: url("images/Web_wed_desktop_1920_lb.jpg");
+	background: url("images/Web_wed_desktop_1920_lb2.jpg");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -43,10 +43,11 @@ section .layer1 {
 
 section .layer3 {
 	position: absolute;
-	top: 48%;
+	top: 35%;
 	left: 48%;
-	width: 14%;
-	height: 7%;
+	clip-path: polygon(50% 0%, 77% 0, 100% 100%, 0% 100%);
+	width: 15%;
+	height: 33%;
 	background: #000000; 
 	transform: translate(-50%, -50%);
 	z-index: 1;
@@ -54,7 +55,7 @@ section .layer3 {
 }
 
 .layer3:hover ~ .layer2 {
-	background: url("images/Web_wed_desktop_1920_p.jpg");
+	background: url("images/Web_wed_desktop_1920_p2.jpg");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -63,18 +64,24 @@ section .layer3 {
 
 section .layer4 {
 	position: absolute;
-	top: 66%;
-	left: 48%;
-	width: 25%;
-	height: 13%;
-	background: #000000; 
+	top: 77.3%;
+	left: 38%;
+	/*width: 55%;
+	height: 39%;*/
+	/*border-bottom: 20vh solid #333;
+    border-left: 20vw solid transparent;
+    border-right: 20vw solid transparent;*/
+	clip-path: polygon(10% 0%, 75% 0, 100% 100%, 0% 100%);
+    height: 35.5%;
+    width: 76%;
+	background: #000000;
 	transform: translate(-50%, -50%);
 	z-index: 1;
 	opacity: 0;
 }
 
 .layer4:hover ~ .layer2 {
-	background: url("images/Web_wed_desktop_1920_a.jpg");
+	background: url("images/Web_wed_desktop_1920_a2.jpg");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
