--- a/style.css
+++ b/style.css
@@ -94,6 +94,21 @@ section .layer4 {
 	cursor: pointer;
 }
 
+@media (max-width:480px) {
+	section .layer1 {
+	position: absolute;
+	top: 50%;
+	left: 86%;
+	width: 28%;
+	height: 15%;
+	background: #000000; 
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	opacity: 0;
+	cursor: pointer;
+}
+}
+
 
 
 
