--- a/style.css
+++ b/style.css
@@ -94,112 +94,6 @@ section .layer4 {
 	cursor: pointer;
 }
 
-/*-------------------------------------------------------------------------------------------------------------*/
-/*780px device*/
-@media (max-width:720px) {
-	section .layer2 {
-	position: absolute;
-	top: 5%;
-	left: 0%;
-	width:100%;
-	height: 90%;
-	background: url("images/Web_wed_desktop_1920.jpg");
-	background-size: 150%;
-	background-repeat: no-repeat;
-	background-position-x: 25%;
-	/*background-attachment: fixed;*/
-	transition: 2s;
-}
-	section .layer1 {
-	position: absolute;
-	top: 40%;
-	left: 87%;
-	width: 18%;
-	height: 11%;
-	background: #000000; 
-	transform: translate(-50%, -50%);
-	z-index: 1;
-	opacity: 0.0;
-	cursor: pointer;
-}
-	.layer1:hover ~ .layer2 {
-	position: absolute;
-	top: 5%;
-	left: 0%;
-	width:100%;
-	height: 90%;
-	background: url("images/Web_wed_desktop_1920_lb2.jpg");
-	background-size:150%;
-	background-repeat: no-repeat;
-	background-position-x: 25%;
-	/*background-attachment: fixed;*/
-	transition: 1s;
-	cursor: pointer;
-}
-
-section .layer3 {
-	position: absolute;
-	top: 31%;
-	left: 59.5%;
-	clip-path: polygon(50% 0%, 77% 0, 100% 100%, 0% 100%);
-	width: 23%;
-	height: 20%;
-	background: #000000; 
-	transform: translate(-50%, -50%);
-	z-index: 1;
-	opacity: 0.0;
-	cursor: pointer;
-}
-
-.layer3:hover ~ .layer2 {
-	position: absolute;
-	top: 5%;
-	left: 0%;
-	width:100%;
-	height: 90%;
-	background: url("images/Web_wed_desktop_1920_p2.jpg");
-	background-size:150%;
-	background-repeat: no-repeat;
-	background-position-x: 25%;
-	/*background-attachment: fixed;*/
-	transition: 1s;
-	cursor: pointer;
-}
-
-section .layer4 {
-	position: absolute;
-	top: 60%;
-	left: 50%;
-	/*width: 55%;
-	height: 39%;*/
-	/*border-bottom: 20vh solid #333;
-    border-left: 20vw solid transparent;
-    border-right: 20vw solid transparent;*/
-	clip-path: polygon(0% 0%, 74% 0, 100% 100%, 0% 100%);
-    height: 29%;
-    width: 100%;
-	background: #555000;
-	transform: translate(-50%, -50%);
-	z-index: 1;
-	opacity: 0;
-	cursor: pointer;
-}
-
-.layer4:hover ~ .layer2 {
-	position: absolute;
-	top: 5%;
-	left: 0%;
-	width:100%;
-	height: 90%;
-	background: url("images/Web_wed_desktop_1920_a2.jpg");
-	background-size:150%;
-	background-repeat: no-repeat;
-	background-position-x: 25%;
-	/*background-attachment: fixed;*/
-	transition: 1s;
-	cursor: pointer;
-}
-}
 
 /*---------------------------------------------------------------------------------------*/
 /*480px devices*/
@@ -275,7 +169,7 @@ section .layer3 {
 
 section .layer4 {
 	position: absolute;
-	top: 39.8%;
+	top: 40.4%;
 	left: 50%;
 	/*width: 55%;
 	height: 39%;*/
@@ -308,6 +202,111 @@ section .layer4 {
 }
 }
 
+/*---------------------------------------------------------------------------------------*/
+/*360px devices*/
+@media (max-width:360px) {
+	section .layer2 {
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width:100%;
+	height: 100%;
+	background: url("images/Web_wed_desktop_1920.jpg");
+	background-size:161%;
+	background-repeat: no-repeat;
+	background-position-x: 33%;
+	/*background-attachment: fixed;*/
+	transition: 2s;
+}
+	section .layer1 {
+	position: absolute;
+	top: 22%;
+	left: 87%;
+	width: 20%;
+	height: 8%;
+	background: #000000; 
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	opacity: 0;
+	cursor: pointer;
+}
+	.layer1:hover ~ .layer2 {
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width:100%;
+	height: 100%;
+	background: url("images/Web_wed_desktop_1920_lb2.jpg");
+	background-size:161%;
+	background-repeat: no-repeat;
+	background-position-x: 33%;
+	/*background-attachment: fixed;*/
+	transition: 1s;
+	cursor: pointer;
+}
 
+section .layer3 {
+	position: absolute;
+	top: 16%;
+	left: 57%;
+	clip-path: polygon(50% 0%, 77% 0, 100% 100%, 0% 100%);
+	width: 25%;
+	height: 12.5%;
+	background: #000000; 
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	opacity: 0.0;
+	cursor: pointer;
+}
+
+.layer3:hover ~ .layer2 {
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width:100%;
+	height: 100%;
+	background: url("images/Web_wed_desktop_1920_p2.jpg");
+	background-size:161%;
+	background-repeat: no-repeat;
+	background-position-x: 33%;
+	/*background-attachment: fixed;*/
+	transition: 1s;
+	cursor: pointer;
+}
+
+section .layer4 {
+	position: absolute;
+	top: 35%;
+	left: 50%;
+	/*width: 55%;
+	height: 39%;*/
+	/*border-bottom: 20vh solid #333;
+    border-left: 20vw solid transparent;
+    border-right: 20vw solid transparent;*/
+	clip-path: polygon(0% 0%, 72% 0, 100% 100%, 0% 100%);
+    height: 18.5%;
+    width: 100%;
+	background: #555000;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	opacity: 0.0;
+	cursor: pointer;
+}
+
+.layer4:hover ~ .layer2 {
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width:100%;
+	height: 100%;
+	background: url("images/Web_wed_desktop_1920_a2.jpg");
+	background-size:161%;
+	background-repeat: no-repeat;
+	background-position-x: 33%;
+	/*background-attachment: fixed;*/
+	transition: 1s;
+	cursor: pointer;
+}
+}
 
 
